crates/math-core/tests/snapshots/wiki_test__wiki109.snap
---
source: crates/math-core/tests/wiki_test.rs
expression: "\\overset{\\alpha}{\\omega} \\\\ \\underset{\\alpha}{\\omega} \\\\ \\overset{\\alpha}{\\underset{\\gamma}{\\omega}}\\\\ \\stackrel{\\alpha}{\\omega}"
---
<math>
    <mover>
        <mi>ω</mi>
        <mi>α</mi>
    </mover>
    <mrow>
    </mrow>
    <munder>
        <mi>ω</mi>
        <mi>α</mi>
    </munder>
    <mrow>
    </mrow>
    <mover>
        <munder>
            <mi>ω</mi>
            <mi>γ</mi>
        </munder>
        <mi>α</mi>
    </mover>
    <mrow>
    </mrow>
    <mover>
        <mi>ω</mi>
        <mi>α</mi>
    </mover>
</math>
