crates/math-core/tests/snapshots/wiki_test__wiki110.snap
---
source: crates/math-core/tests/wiki_test.rs
expression: "x', y'', f', f'' \\\\ x^\\prime, y^{\\prime\\prime}"
---
<math>
    <msup>
        <mi>x</mi>
        <mo>′</mo>
    </msup>
    <mo>,</mo>
    <msup>
        <mi>y</mi>
        <mo>″</mo>
    </msup>
    <mo>,</mo>
    <msup>
        <mi>f</mi>
        <mo>′</mo>
    </msup>
    <mo>,</mo>
    <msup>
        <mi>f</mi>
        <mo>″</mo>
    </msup>
    <msup>
        <mi>x</mi>
        <mo>′</mo>
    </msup>
    <mo>,</mo>
    <msup>
        <mi>y</mi>
        <mrow>
            <mo>′</mo>
            <mo>′</mo>
        </mrow>
    </msup>
</math>
