crates/math-core/tests/snapshots/wiki_test__wiki113.snap
---
source: crates/math-core/tests/wiki_test.rs
expression: "\\dot{x}, \\ddot{x}"
---
<math>
    <mover accent="true">
        <mi>x</mi>
        <mo>˙</mo>
    </mover>
    <mo>,</mo>
    <mover accent="true">
        <mi>x</mi>
        <mo>¨</mo>
    </mover>
</math>
