crates/math-core/tests/snapshots/wiki_test__wiki115.snap
---
source: crates/math-core/tests/wiki_test.rs
expression: "\\overbrace{ 1+2+\\cdots+100 }^{5050}"
---
<math>
    <mover>
        <mover>
            <mrow>
                <mn>1</mn>
                <mo>+</mo>
                <mn>2</mn>
                <mo>+</mo>
                <mo lspace="0">·</mo>
                <mo lspace="0" rspace="0.1667em">·</mo>
                <mo lspace="0" rspace="0">·</mo>
                <mo>+</mo>
                <mn>100</mn>
            </mrow>
            <mo>⏞</mo>
        </mover>
        <mn>5050</mn>
    </mover>
</math>
