crates/math-core/tests/snapshots/wiki_test__wiki117.snap
---
source: crates/math-core/tests/wiki_test.rs
expression: "\\overbrace{ 1+2+\\cdots+100 }^{5050}"
---
<math>
    <mover>
        <mover accent="true">
            <mrow>
                <mn>1</mn>
                <mo>+</mo>
                <mn>2</mn>
                <mo>+</mo>
                <mo lspace="0" rspace="0">⋯</mo>
                <mo>+</mo>
                <mn>100</mn>
            </mrow>
            <mo>⏞</mo>
        </mover>
        <mn>5050</mn>
    </mover>
</math>
