crates/math-core/tests/snapshots/wiki_test__wiki118.snap
---
source: crates/math-core/tests/wiki_test.rs
expression: "\\underbrace{ a+b+\\cdots+z }_{26}"
---
<math>
    <munder>
        <munder accentunder="true">
            <mrow>
                <mi>a</mi>
                <mo>+</mo>
                <mi>b</mi>
                <mo>+</mo>
                <mo lspace="0" rspace="0">⋯</mo>
                <mo>+</mo>
                <mi>z</mi>
            </mrow>
            <mo>⏟</mo>
        </munder>
        <mn>26</mn>
    </munder>
</math>
